fix: updated to next js

--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,9 @@
       "recommended": true,
       "suspicious": {
         "noUnknownAtRules": "off"
+      },
+      "correctness": {
+        "useExhaustiveDependencies": "error"
       }
     },
     "domains": {
@@ -30,7 +33,8 @@
   "assist": {
     "actions": {
       "source": {
-        "organizeImports": "on"
+        "organizeImports": "off"
+
       }
     }
   }
