feat: created socials component

--- a/biome.json
+++ b/biome.json
@@ -23,6 +23,9 @@
       },
       "correctness": {
         "useExhaustiveDependencies": "error"
+      },
+      "a11y": {
+        "noSvgWithoutTitle": "off"
       }
     },
     "domains": {
