--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
@@ -21,6 +22,8 @@
     "qss": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-svg": "^16.3.0",
+    "shadcn": "^3.6.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
