--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "next-themes": "^0.4.6",
     "qss": "^3.0.0",
     "react": "19.1.0",
+    "react-activity-calendar": "^3.0.5",
     "react-dom": "19.1.0",
+    "react-github-calendar": "^5.0.4",
     "react-svg": "^16.3.0",
     "shadcn": "^3.6.2",
     "tailwind-merge": "^3.3.1"
